.provarCaches/00D5f000005vwGkEAI/objects/rstk__soosales__c.object
<CustomObject>
    <description>soosales__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soosales_comments__c</fullName>
        <inlineHelpText>These are comments associated SO line</inlineHelpText>
        <label>Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soosales_compct__c</fullName>
        <inlineHelpText>This is the total commission percentage on this Sales Order line</inlineHelpText>
        <label>Commission Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__soosales_line__c</fullName>
        <inlineHelpText>This is the Sales Order Line Number</inlineHelpText>
        <label>Order Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soosales_order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Sales Order Number associated with this record.</inlineHelpText>
        <label>Order Number</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Sales Order Salesperson</relationshipLabel>
        <relationshipName>Sales_Order_Salesperson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soosales_soline__c</fullName>
        <inlineHelpText>This is the Sales Order Line Number</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>Sales Order Salesperson</relationshipLabel>
        <relationshipName>soosales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soosales_spersn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the Salesperson ID for this Sales Order Line</inlineHelpText>
        <label>Salesperson ID</label>
        <referenceTo>rstk__sosales__c</referenceTo>
        <relationshipLabel>Sales Order Salesperson</relationshipLabel>
        <relationshipName>Sales_Order_Salesperson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soosales_split__c</fullName>
        <inlineHelpText>This is the Split percentage on the Commission</inlineHelpText>
        <label>Commission Split Pct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Salesperson</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Salesperson</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>